--- a/base.css
+++ b/base.css
@@ -1,6 +1,8 @@
-html, body {
+html,
+body {
     margin: 0;
 }
+
 body {
     background-color: #f1f1f1;
     display: flex;
@@ -13,26 +15,186 @@ body {
     margin: 0 auto;
     background-color: aquamarine;
 }
+
 .main {
     display: flex;
     flex-flow: column;
     width: 85%;
 }
+
 .menu {
     width: 15%;
-    background-color: aqua;
+    background-color: rgb(43, 223, 223);
     padding: 10px 20px 0px;
+    background: linear-gradient(135deg, #f42929, #ffffff);
+    color: #ffffff;
+    text-align: left;
 }
+
+.menu a {
+    text-decoration: none;
+    display: block;
+    padding: 10px 0;
+    color: white;
+}
+
+.menu a:visited {
+    color: rgb(255, 255, 255);
+}
+
+.menu ul {
+    list-style-type: circle;
+}
+
 .header {
     background-color: rgb(5, 108, 108);
     min-height: 150px;
+
 }
+
+.header img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    object-position: 0% 30%;
+}
+
 .content {
     background-color: white;
-    min-height: 300px;
+    min-height: 600px;
     padding: 20px;
+    background-image: url('https://st4.depositphotos.com/5758452/24522/v/450/depositphotos_245229358-stock-illustration-red-vector-love-heart-shape.jpg');
+    background-size: contain;
+    background-position: center;
+}
+
+.content h1 {
+    color: rgb(5, 108, 108);
+    font-size: 30px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.content p {
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    text-align: justify;
+    margin: 0;
+    padding: 0;
+}
+
+.content iframe {
+    width: 100%;
+    height: 150px;
+}
+
+.info {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+    font-size: 20px;
+}
+
+.infotel {
+    width: 50%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.infozap {
+    width: 50%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.infoend {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.info img {
+    width: 9%;
+    padding-right: 20px;
+}
+
+.textcontent {
+    background-color: rgb(255, 255, 255, 0.7);
+    border-radius: 5%;
+    padding: 20px;
+    min-height: 600px;
+}
+.formDiv{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+.formDiv h2{
+    color: rgb(5, 108, 108);
+    font-size: 30px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+.buttonsDiv{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    width: 100%;
+}
+.buttonsDiv button{
+    width: 48%;
+    padding: 10px;
+    background-color: rgb(5, 108, 108);
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+}
+.row{
+    display: grid;
+    padding: 10px;
+}
+.row label{
+    font-size: 20px;
+    color: rgb(5, 108, 108);
+    text-align: center;
+}
+.row input{
+    width: 100%;
+}
+.hoursTable {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.hoursTable, .hoursTable th, .hoursTable td {
+    border: 2px solid #5a5a5a; /* Change the color as needed */
+}
+
+.hoursTable th, .hoursTable td {
+    padding: 10px;
+    text-align: center;
+}
+
+.hoursTable th {
+    background-color: #f2f2f2;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: rgb(204, 189, 255);
+    background: linear-gradient(1deg, #ff4343, #ffffff);
     min-height: 150px;
+    text-align: center;
+    justify-content: center;
 }
